--- a/test/basic.preserve.expect.css
+++ b/test/basic.preserve.expect.css
@@ -37,7 +37,7 @@ h1 + p,h2 + p,h3 + p,h4 + p,h5 + p,h6 + p {}
 	.foo,
 	.bar > .baz;
 
-.foo + p,.bar>.baz + p {
+.foo + p,.bar > .baz + p {
 	display: block;
 }
 
@@ -106,7 +106,7 @@ article :--heading + p {
 	.foo,
 	.bar > .baz;
 
-.foo,.bar>.baz {
+.foo,.bar > .baz {
 	display: block;
 }
 
@@ -146,3 +146,9 @@ main :--foo + p {
 .foo {}
 
 :--foobar {}
+
+@custom-selector :--foobaz .foo.baz;
+
+a, .foo.baz {}
+
+a, :--foobaz {}
