--- a/test/export-selectors.css
+++ b/test/export-selectors.css
@@ -18,3 +18,4 @@
 @custom-selector :--button button, .button;
 @custom-selector :--enter :hover, :focus;
 @custom-selector :--any-foobar .foo, .bar;
+@custom-selector :--foobaz .foo.baz;
